# controllers/users.controller.js
@@ -1,0 +1,29 @@
+const userServices = require("../services/users.service");
+
+exports.register = (req, res, next) => {
+    userServices.register(req.body,(error, results) => {
+        if(error){
+            return next(error);
+        }
+        
+        return res.status(200).send({
+                message: "Success",
+                data: results
+        });
+        
+    });
+}
+
+exports.login = (req, res, next) => {
+    const {email, paasword} = req.body;
+
+    userServices.login({email, password}, (error, results) => {
+        if(error){
+            return next(error);
+        }
+        return res.status(200).send({
+            message: "Success",
+            data: results
+        });
+    });
+};
