# routes/app.routes.js
@@ -1,5 +1,8 @@
 const categoryController = require("../controllers/categories.controller");
 const productController = require("../controllers/products.controller");
+const userController = require("../controllers/users.controller");
+
+
 const express = require("express");
 const router = express.Router();
 
@@ -16,5 +19,9 @@ router.get("/product", productController.findAll);
 router.get("/product/:id", productController.findOne);
 router.put("/product/:id", productController.update);
 router.delete("/product/:id", productController.delete);
+
+
+router.post("/register", userController.register);
+router.post("/login", userController.login);
 
 module.exports = router;
